# YSharp-YSharp

./: .gitignore  Cargo.toml  README.md  build.ps1  rust-toolchain.toml
.cargo/: config.toml
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs  pkg.rs  yo_main.rs
compiler/src/codegen/: mod.rs
compiler/src/codegen/c_backend/: mod.rs  runtime.c
compiler/src/codegen/game/: mod.rs
compiler/src/codegen/gpu/: mod.rs
compiler/src/codegen/llvm/: builder.rs  mod.rs  target.rs
compiler/src/codegen/wasm/: mod.rs
compiler/src/driver/: build.rs  mod.rs  session.rs  target.rs
compiler/src/easy/: mod.rs
compiler/src/hir/: ir.rs  lower.rs  mod.rs  scope.rs
compiler/src/lexer/: lexer.rs  mod.rs  token.rs
compiler/src/mir/: ir.rs  lower.rs  mod.rs  ssa.rs
compiler/src/mir/ad/: mod.rs
compiler/src/mir/opt/: const_fold.rs  inline.rs  loop_opt.rs  mod.rs  reorder.rs  vectorize.rs
compiler/src/parser/: ast.rs  error.rs  grammar.rs  mod.rs
compiler/src/runtime/: mod.rs
compiler/src/typeck/: context.rs  infer.rs  mod.rs  unify.rs
docs/: getting-started.md
ide/: main.js  package.json
installer/: README.md  build-msi.bat  install.ps1  installer.nsi  installer.wxs
launcher/: Register Y# File Association.reg  Y# IDE.bat  Y# Launcher.bat
runtime/: Cargo.toml
runtime/src/: alloc.rs  ecs.rs  frame_alloc.rs  gc.rs  lib.rs  physics.rs  simd_math.rs
runtime/src/ffi/: ios.rs  mod.rs
runtime/src/tensor_ops/: conv.rs  matmul.rs  mod.rs
scripts/: build.sh  install.sh
testprog/: debug_easy.rs  easy_debug.rs  fn_only_test.ys  function_test.ys  (+7 more)
(+43 files in other folders)
