[package]
name = "oys-compiler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oys"
path = "src/main.rs"

[[bin]]
name = "yo"
path = "src/yo_main.rs"

[lib]
name = "oys_compiler"
path = "src/lib.rs"

[dependencies]
logos = "0.15"
nom = "8.0"
thiserror = "2"
crossbeam-channel = "0.5"
rustc-hash = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
smol_str = "0.3"
fxhash = "0.2"
smallvec = "1"
bitflags = "2"
once_cell = "1"
flate2 = "1"
tar = "0.4"

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
